Fix recommended and ul spacing (#61)
* Fix recommended and ul spacing
 🐿2.5.10

* Make links full width in recommended
 🐿2.5.10

* Strict application of list styles
 🐿2.5.10

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -18,12 +18,12 @@
 		margin-top: 0;
 	}
 
-	ul {
+	> ul {
 		@include oTypographyList();
 		@include oTypographyListUnordered();
 	}
 
-	ol {
+	> ol {
 		@include oTypographyList();
 		@include oTypographyListOrdered();
 	}
